# Node-based-image-processor

./: README.md
NodeEditor/: CMakeLists  README  main.cpp
NodeEditor 0.5/: CMakeLists.txt  README
NodeEditor 0.5/src/: Edge.cpp  Edge.h  MainWindow.cpp  MainWindow.h  NodeCanvas.cpp  NodeCanvas.h  NodeItem.cpp  NodeItem.h  Port.cpp  Port.h  main.cpp
NodeEditor/src/: MainWindow.cpp  MainWindow.h  NodeCanvas.cpp  NodeCanvas.h
